--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,439 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;500;900&display=swap");
+
+:root {
+  --red: #70172a;
+  --purple: #8b61d5;
+  --pink: #eddff3;
+  --lblue: #a9c9ff;
+}
+
+/* rendered on animation.js file */
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slide-down {
+  from {
+    transform: translateY(
+      -100%
+    ); /* start the animation with the SVG above the container */
+  }
+  to {
+    transform: translateY(
+      0
+    ); /* end the animation with the SVG in the container */
+  }
+}
+
+@keyframes moveLeft {
+  0% {
+    transform: translate(0);
+  }
+  100% {
+    transform: translate(-3000vw);
+  }
+}
+
+body {
+  font-family: "Rubik", Arial;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 1.5;
+
+  background-color: #ffffff;
+  color: #020308;
+}
+
+/*             --header--                */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 0 45px 0 45px;
+  height: 64px;
+  background-color: #ffffff;
+
+  transition: background-color 5s;
+}
+
+header.scrolled {
+  /* background-color: #000000; */
+
+  /* background-color: #A9C9FF;
+  background-image: linear-gradient(180deg, #FFBBEC 0%, #A9C9FF 40%); */
+
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+header.scrolled a:hover {
+  /* color: var(--red); */
+  /* text-shadow: 1px 1px 1px #000; */
+  /* text-shadow: none; */
+}
+
+.logo,
+header nav {
+  flex: 1;
+}
+
+header nav {
+  text-align: right;
+}
+
+header a {
+  margin: 0 0 0 16px;
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+header a:hover {
+  /* color: #5B3F81; */
+  /* color: #F64F28; */
+  color: var(--red);
+  border-bottom: 0.2rem solid;
+  /* text-shadow: 1px 1px 1px #FFBBEC; */
+}
+
+div.face {
+  position: relative;
+}
+
+div.iris {
+  position: absolute;
+  top: 23px;
+  left: 11px;
+}
+
+div.iris-right {
+  left: 49px;
+}
+
+div.iris div {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  background-color: #052837;
+  border-radius: 3px;
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  /* position: relative; */
+  width: 64px;
+  text-align: left;
+  height: 40px;
+  margin: 10px 10px 10px 0;
+}
+
+.logo img {
+  /* position: absolute; */
+  /* transform: scale(0.4); */
+  height: 100%;
+}
+
+/*              --header end--            */
+
+/*           ------about------              */
+
+.about {
+  height: 500px;
+  margin: 120px 20px 20px 20px;
+}
+
+.about .content {
+  display: flex;
+  margin: 48px;
+  flex-direction: row;
+}
+
+.about .content div.content {
+  flex-direction: column;
+  margin: 0 48px 48px 0px;
+}
+
+/* .about .image img {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5)), url("ka_profile_photo.svg");
+} */
+
+.about .fn-logo {
+  position: relative;
+  width: 300px;
+  height: 100px;
+  margin: 10px 0 10px 0px;
+  /* padding: 10px 10px 10px 0; */
+}
+
+.about .fn-logo img {
+  position: absolute;
+  top: 0px;
+  /* width: 400px; */
+  /* left: 50%; */
+  /* width: 50%; */
+  /* height: 100%; */
+}
+
+.slide-down {
+  animation: slide-down 3s forwards; /* define the slide-down animation */
+  /* transform: translate(-50%, -50%); */
+  /* z-index: 2; */
+}
+
+/*         --about end--             */
+
+/*           ------portfolio------              */
+
+/* .portfolio {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  height: 900px;
+  width: 100%;
+}
+
+.porfolio .container a {
+  text-decoration: none;
+} */
+
+/*           ------portfolio end------              */
+
+/*         --contact--             */
+.contact {
+  /* position: relative; */
+  margin: 0px auto;
+  /* height: 100%; */
+  width: 100%;
+  /* background-color:#6E07F3; */
+  background-color: #a9c9ff;
+  background-image: linear-gradient(150deg, var(--purple) 0%, var(--pink) 100%);
+
+  /* background: #f4c4f3;  
+  background: -webkit-linear-gradient(to right, #AC73EF, #f4c4f3);  
+  background: linear-gradient(to left, #AC73EF, #f4c4f3);  */
+
+  overflow: hidden;
+}
+
+/* .contact {
+  display: flex;
+  flex-direction:  column;
+  ;
+} */
+
+.marquee span {
+  animation: moveLeft 900s infinite;
+  white-space: nowrap;
+  display: block;
+  position: relative;
+  color: var(--pink);
+  font-size: 60px;
+}
+
+/* --------form styles---------- */
+
+.contact .container {
+  display: flex;
+  flex-direction: row;
+  /*   display: flex; */
+}
+
+.contact .container .contact-form,
+.contact .container .contact-social {
+  width: 50%;
+  /* padding: 10px; */
+  margin: 20px;
+  /* max-width: 400px; */
+}
+
+/* .contact .contact-form input,
+.contact .contact-form textarea {
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  background: rgba(0,0,0,0.5);
+  background: none;
+  border: 1px solid rgba(255,255,255,.1);
+  padding: 0 15px;
+  color: #FFF;
+  border-radius: 5px;
+  outline: none;
+  font-size: 14px;
+} */
+
+.contact .contact-form .app-form-group {
+  /* background: none; */
+  font-size: 12px;
+  color: #fff;
+  /* margin: 0 0 10px 0; */
+  /* margin-bottom: 15px; */
+  padding: 10px 0 10px 0;
+  width: 100%;
+}
+
+input {
+  background: none;
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 10px 5px 5px 5px;
+}
+
+input[type="email"] {
+  height: 40px;
+  border-bottom: 3px solid #000;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  outline: none;
+}
+
+input[type="message"] {
+  /* background: none; */
+  /* width: 100%; */
+  height: 90px;
+  border-radius: 5px;
+  border: 3px solid #000;
+  margin-bottom: 0;
+  /* align-self: flex-end; */
+  vertical-align: bottom;
+}
+
+button {
+  border-radius: 100px;
+  margin: 10px 10px 10px 0px;
+  padding: 10px 30px 10px 30px;
+  background-color: var(--red);
+  color: #fff;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  /* box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2); */
+}
+
+button:hover {
+  box-shadow: 2px 4px 5px 3px rgb(95 18 35 / 40%);
+  transition: box-shadow 0.2s;
+}
+.contact .contact-form input:focus {
+  width: 100%;
+  padding: 10px;
+  background: none;
+  border: none;
+  border-bottom: 3px solid var(--red);
+  color: #fff;
+  font-size: 14px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+/* ::-webkit-input-placeholder {
+    color: #DDD;
+} */
+
+.contact #my-form-status {
+  color: var(--red);
+  font-size: 10px;
+}
+
+/* --------form styles end---------- */
+
+.contact .contact-social .contact-logo {
+  margin: 10px auto;
+  /* padding: 0; */
+  height: 65px;
+  width: 150px;
+}
+
+.contact .contact-social .social {
+  display: flex;
+  justify-content: center;
+}
+
+.contact .contact-social .social a {
+  height: 45px;
+  width: 45px;
+}
+
+.contact .contact-social .social a:hover {
+  padding: 10px 10px 10px 0px;
+  /* background-color: var(--red); */
+  /* width: 2rem; */
+}
+/* .contact .top-link {
+  width:  100%;
+} */
+
+.contact .copyright {
+  margin-bottom: 0;
+  display: inline-block;
+}
+
+.contact .copyright p {
+  text-align: center;
+  font-size: 16px;
+  padding: 10px 10px 0px 10px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 50%;
+  transform: translate(-50%, -50%);
+  /* z-index: 1; */
+}
+
+/*             --contact end--             */
+
+section {
+  position: relative;
+}
+
+.about .scroll-to,
+.portfolio .scroll-to {
+  position: absolute;
+  /* left:  50%; */
+  /* bottom:  3vh; */
+
+  bottom: 5px;
+
+  width: 64px;
+  height: 32px;
+
+  background-image: url(./assets/KA_arrow.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  transform: translateX(-50%);
+}
+
+.about .scroll-to {
+  left: 30px;
+  padding: 10px 0 0 0;
+}
+
+.portfolio .scroll-to {
+  right: 0px;
+}
+
+@media (max-width: 485px) {
+  .contact .copyright p {
+    font-size: 12px;
+    width: 100%;
+  }
 }
