--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
+
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;500;900&display=swap");
 
 :root {
@@ -54,29 +55,36 @@ code {
 
 body {
   font-family: "Rubik", Arial;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 300;
   line-height: 1.5;
 
   background-color: #ffffff;
   color: #020308;
+  margin: 0;
 }
 
 /*             --header--                */
 header {
-  position: fixed;
+  /* position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 1; */
+
+  position: -webkit-sticky;
+  /* position: sticky; */
+  top: 0px;
+  z-index: 99999;
 
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  /* flex-direction: row; */
+  /* justify-content: space-between; */
   align-items: center;
 
-  padding: 0 45px 0 45px;
-  height: 64px;
+  /* margin: 0; */
+  padding: 0px 20px;
+  height: 50px;
   background-color: #ffffff;
 
   transition: background-color 5s;
@@ -88,8 +96,8 @@ header.scrolled {
   /* background-color: #A9C9FF;
   background-image: linear-gradient(180deg, #FFBBEC 0%, #A9C9FF 40%); */
 
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 
 header.scrolled a:hover {
@@ -105,10 +113,11 @@ header nav {
 
 header nav {
   text-align: right;
+  margin: 0 0 0 0;
 }
 
 header a {
-  margin: 0 0 0 16px;
+  margin: 0 0 0 14px;
   color: #000;
   text-decoration: none;
   cursor: pointer;
@@ -118,7 +127,7 @@ header a:hover {
   /* color: #5B3F81; */
   /* color: #F64F28; */
   color: var(--red);
-  border-bottom: 0.2rem solid;
+  border-bottom: 0.1rem solid;
   /* text-shadow: 1px 1px 1px #FFBBEC; */
 }
 
@@ -163,10 +172,52 @@ div.iris div {
 
 /*              --header end--            */
 
+/* applies to all-multiple sections */
+
+section {
+  position: relative;
+  min-height: 100vh;
+}
+
+.about .scroll-to,
+.portfolio .scroll-to {
+  position: absolute;
+  /* left:  50%; */
+  /* bottom:  3vh; */
+
+  bottom: 5px;
+
+  width: 64px;
+  height: 32px;
+
+  background-image: url(./assets/KA_arrow.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  /* transform: translateX(-50%); */
+}
+
+.about .scroll-to {
+  left: 30px;
+  padding: 10px 0 0 0;
+}
+
+.portfolio .scroll-to {
+  right: 30px;
+}
+
+/* applies to multiple sections end */
+
 /*           ------about------              */
 
+.slide-down {
+  animation: slide-down 3s forwards; /* define the slide-down animation */
+  /* transform: translate(-50%, -50%); */
+  /* z-index: 2; */
+}
+
 .about {
-  height: 500px;
+  /* height: 500px; */
   margin: 120px 20px 20px 20px;
 }
 
@@ -174,16 +225,35 @@ div.iris div {
   display: flex;
   margin: 48px;
   flex-direction: row;
+  /* width: 50%; */
+}
+
+.about .content,
+.about .image {
+  flex: 1;
 }
 
 .about .content div.content {
   flex-direction: column;
   margin: 0 48px 48px 0px;
+  width: 75px;
 }
 
-/* .about .image img {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5)), url("ka_profile_photo.svg");
-} */
+.about .image img {
+  width: 100%;
+}
+
+.about .image img:hover {
+  /* display: none; */
+  /* background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("./assets/ka_profile_photo.png"); */
+  content: url("./assets/ka_profile_photo.png");
+  transition: background-image 3s;
+}
 
 .about .fn-logo {
   position: relative;
@@ -202,15 +272,9 @@ div.iris div {
   /* height: 100%; */
 }
 
-.slide-down {
-  animation: slide-down 3s forwards; /* define the slide-down animation */
-  /* transform: translate(-50%, -50%); */
-  /* z-index: 2; */
-}
+/*   --      ----------------about end----------   --      */
 
-/*         --about end--             */
-
-/*           ------portfolio------              */
+/*      --------------portfolio-------------        */
 
 /* .portfolio {
   display: flex;
@@ -224,6 +288,40 @@ div.iris div {
   text-decoration: none;
 } */
 
+#portfolio {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  /* width: 90vw; */
+}
+
+#portfolio a {
+  text-decoration: none;
+  margin-right: 10px;
+  color: #000;
+}
+
+#portfolio a:hover {
+  /* border-color: red; */
+  color: var(--red);
+  border-bottom: 0.1rem solid;
+}
+
+#portfolio h1 {
+  /* margin:  40px; */
+  font-size: 50px;
+  font-weight: 700;
+}
+
+#portfolio li {
+  display: inline;
+}
+
+#portfolio .show-filters {
+  font-size: 1em;
+  font-weight: 500;
+}
+
 /*           ------portfolio end------              */
 
 /*         --contact--             */
@@ -231,7 +329,9 @@ div.iris div {
   /* position: relative; */
   margin: 0px auto;
   /* height: 100%; */
-  width: 100%;
+  /* width: 100%; */
+  height: 800px;
+  /* min-height: none; */
   /* background-color:#6E07F3; */
   background-color: #a9c9ff;
   background-image: linear-gradient(150deg, var(--purple) 0%, var(--pink) 100%);
@@ -408,37 +508,6 @@ button:hover {
 }
 
 /*             --contact end--             */
-
-section {
-  position: relative;
-}
-
-.about .scroll-to,
-.portfolio .scroll-to {
-  position: absolute;
-  /* left:  50%; */
-  /* bottom:  3vh; */
-
-  bottom: 5px;
-
-  width: 64px;
-  height: 32px;
-
-  background-image: url(./assets/KA_arrow.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  transform: translateX(-50%);
-}
-
-.about .scroll-to {
-  left: 30px;
-  padding: 10px 0 0 0;
-}
-
-.portfolio .scroll-to {
-  right: 0px;
-}
 
 @media (max-width: 485px) {
   .contact .copyright p {
