updated portfolio hover styles and added language filter function

--- a/src/index.css
+++ b/src/index.css
@@ -314,6 +314,19 @@ section {
   border-bottom: 0.1rem solid;
 }
 
+#portfolio .project:hover {
+  background-color: #a9c9ff;
+  background-image: linear-gradient(150deg, var(--purple) 0%, var(--pink) 100%);
+  /* border: #000 solid; */
+  /* background: #ecf0f3; */
+  /* padding: 0px; */
+  /* padding-left: 20px; */
+  /* height: 100%; */
+  /* font-size: 14px; */
+  border-radius: 3px;
+  box-shadow: none;
+}
+
 #portfolio h1 {
   /* margin:  40px; */
   font-size: 50px;
@@ -325,8 +338,14 @@ section {
 }
 
 #portfolio .show-filters {
+  /* display: none; */
+  margin-right: 15px;
   font-size: 1em;
   font-weight: 500;
+}
+
+#portfolio .filters-list a.selected {
+  border-bottom: 3px solid var(--red);
 }
 
 #portfolio .w-100 {
