--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 :root {
   --red: #70172a;
   --purple: #8b61d5;
-  --pink: #eddff3;
+  --pink: #93778d;
   --lblue: #a9c9ff;
 }
 
@@ -237,7 +237,7 @@ section {
 
 .about .content div.content {
   flex-direction: column;
-  margin: 0 48px 48px 0px;
+  /* margin: 0 48px 48px 0px; */
   /* width: 75px; */
 }
 
@@ -259,6 +259,7 @@ section {
     url("./assets/ka_profile_photo.png"); */
   content: url("./assets/ka_profile_photo.png");
   transition: background-image 3s;
+  padding-top: 10px;
 }
 
 .about .fn-logo {
@@ -316,7 +317,7 @@ section {
 
 #portfolio .project:hover {
   background-color: #a9c9ff;
-  background-image: linear-gradient(150deg, var(--purple) 0%, var(--pink) 100%);
+  background-image: linear-gradient(170deg, var(--purple) 0%, var(--lblue) 90%);
   /* border: #000 solid; */
   /* background: #ecf0f3; */
   /* padding: 0px; */
@@ -386,7 +387,11 @@ section {
   /* min-height: none; */
   /* background-color:#6E07F3; */
   background-color: #a9c9ff;
-  background-image: linear-gradient(150deg, var(--purple) 0%, var(--pink) 100%);
+  background-image: linear-gradient(
+    190deg,
+    var(--purple) 0%,
+    var(--lblue) 100%
+  );
 
   /* background: #f4c4f3;  
   background: -webkit-linear-gradient(to right, #AC73EF, #f4c4f3);  
@@ -395,18 +400,12 @@ section {
   overflow: hidden;
 }
 
-/* .contact {
-  display: flex;
-  flex-direction:  column;
-  ;
-} */
-
 .marquee span {
   animation: moveLeft 900s infinite;
   white-space: nowrap;
   display: block;
   position: relative;
-  color: var(--pink);
+  color: #fff;
   font-size: 60px;
 }
 
@@ -425,7 +424,7 @@ section {
 
 .contact .contact-form .app-form-group {
   font-size: 14px;
-  color: #fff;
+  /* color: #fff; */
   padding: 10px 0 10px 0;
 }
 
@@ -434,11 +433,12 @@ input {
   width: 100%;
   font-size: 10px;
   font-weight: 200;
+  color: var(--red);
 }
 
 input[type="email"] {
   height: 40px;
-  border-bottom: 3px solid #000;
+  border-bottom: 3px solid #fff;
   border-top: none;
   border-left: none;
   border-right: none;
@@ -448,7 +448,7 @@ input[type="email"] {
 input[type="message"] {
   height: 90px;
   border-radius: 5px;
-  border: 3px solid #000;
+  border: 3px solid #fff;
   vertical-align: bottom;
 }
 
@@ -462,7 +462,7 @@ input[type="message"] {
   transition: border-color 0.3s;
 }
 ::-webkit-input-placeholder {
-  color: var(--red);
+  color: #fff;
 }
 
 .contact .contact-form input[type="message"]:focus {
@@ -483,7 +483,9 @@ button {
 button:hover {
   /* box-shadow: 2px 4px 5px 3px rgb(95 18 35 / 40%); */
   box-shadow: rgb(125, 16, 16) 0px 10px 30px -8px;
-  background-color: #9b0828;
+  /* background-color: #9b0828; */
+  background-color: #fff;
+  color: var(--red);
   transition: box-shadow 0.2s;
 }
 
